Добавлен пример switch (match) для JDK17+